feat: migrate to Spring AI Alibaba 1.1.2 on Spring Boot 3.4
Spring AI 2.0 -> 1.1.2 (the Spring AI Alibaba baseline) with
spring-ai-alibaba-bom 1.1.2.2 imported for the ecosystem; Spring Boot
4.1 -> 3.4.9 (1.1.2 targets Spring Framework 6.1; Boot 4's HttpHeaders
and Jackson 3 break it). Model access stays OpenAI-compatible via
spring.ai.model.chat/embedding selectors. Jackson 3 (tools.jackson) ->
Jackson 2 (com.fasterxml.jackson) across 44 files, including
valueStream()->StreamSupport and checked JsonProcessingException;
ChatClient options now require .build(); explicit JsonMapper and
RestClient.builder beans for Boot 3.4 autoconfiguration gaps.